add  aria-label

--- a/contacts.html
+++ b/contacts.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header class="header header__second">
-      <a href="./index.html" class="link"> 
+      <a href="./index.html" class="link" aria-label="На головну"> 
         <svg class="logo" width="80" height="24">
           <use href="./images/symbol-defs.svg#icon-logo-black"></use>
         </svg>
@@ -33,7 +33,7 @@
            <li class="list"><a href="./contacts.html" class="link nav__link nav__link-second  text">Контакти</a></li>
        </ul>
       </nav>
-      <button type="button" class="button__mobile__menu">
+      <button type="button" class="button__mobile__menu" aria-label="Мобільне меню">
        <svg class="icon__menu__mobile icon__menu__mobile-second"  width="24" height="24">
          <use href="./images/symbol-defs.svg#icon-menu-mobile"></use>
        </svg>
@@ -147,7 +147,7 @@
           <use href="./images/symbol-defs.svg#icon-location-big"></use>
         </svg>
       </div>
-    </ul>
+</div>
   </section>
  </main>
 
