--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
    
       <header class="header">
-        <a href="./index.html" class="link"> 
+        <a href="./index.html" class="link" aria-label="На головну"> 
           <svg class="logo" width="80" height="24">
             <use href="./images/symbol-defs.svg#icon-logo"></use>
           </svg>
@@ -40,7 +40,7 @@
              <li class="list"><a href="./contacts.html" class="link nav__link text">Контакти</a></li>
          </ul>
         </nav>   
-        <button type="button" class="button__mobile__menu">
+        <button type="button" class="button__mobile__menu" aria-label="Мобільне меню">
           <svg class="icon__menu__mobile"  width="24" height="24">
             <use href="./images/symbol-defs.svg#icon-menu-mobile"></use>
           </svg>
@@ -65,7 +65,7 @@
                 </a>
               </div>
               <div class="hero__image-container">
-                <div class="hero__image hero__image-navy">  </div>
+                <div class="hero__image-navy">  </div>
                 <picture>
                   <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732193975/apero/hero/hero-desktop/hero-popSalt-desk-1x-min_d7kdow.png 1x,
                   https://res.cloudinary.com/ddtdtthqh/image/upload/v1732193977/apero/hero/hero-desktop/hero-popSalt-desk-2x-min_sxk4w1.png 2x" 
@@ -76,7 +76,7 @@
                   <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194099/apero/hero/hero-mob/hero-popSalt-mob-1x-min_msx9jo.png 1x, 
                   https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194101/apero/hero/hero-mob/hero-popSalt-mob-2x-min_hddr2m.png 2x" 
                   media="(max-width: 743px)" />
-               <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194099/apero/hero/hero-mob/hero-popSalt-mob-1x-min_msx9jo.png" class="hero-image" alt="Navy popcorn"  />
+               <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194099/apero/hero/hero-mob/hero-popSalt-mob-1x-min_msx9jo.png" alt="Navy popcorn"  />
                </picture>
               </div>
             </div>
@@ -94,7 +94,7 @@
                 </a>
               </div>
               <div class="hero__image-container">
-                <div class="hero__image hero__image-orange"></div>
+                <div class=" hero__image-orange"></div>
                 <picture>
                   <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732193973/apero/hero/hero-desktop/hero-popChees-desk-1x-min_aftk2x.png 1x,
                   https://res.cloudinary.com/ddtdtthqh/image/upload/v1732193974/apero/hero/hero-desktop/hero-popChees-desk-2x-min_tckqmq.png 2x" 
@@ -108,7 +108,7 @@
                   https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194097/apero/hero/hero-mob/hero-popCheese-mob-2x-min_cbydxv.png 2x" 
                   type="image/png"
                   media="(max-width: 743px)"/>
-               <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194095/apero/hero/hero-mob/hero-popCheese-mob-1x-min_yecute.png" class="hero-image" alt="Orange popcorn"  />
+               <img class="hero__image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194095/apero/hero/hero-mob/hero-popCheese-mob-1x-min_yecute.png" alt="Orange popcorn"  />
                </picture>
               </div>
             </div>
@@ -127,7 +127,7 @@
                 </a>
               </div>
               <div class="hero__image-container">
-                <div class="hero__image hero__image-violet"></div>
+                <div class="hero__image-violet"></div>
                 <picture>
                   <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732193970/apero/hero/hero-desktop/hero-popCaramel-desk-1x-min_m3kidi.png 1x,
                   https://res.cloudinary.com/ddtdtthqh/image/upload/v1732193972/apero/hero/hero-desktop/hero-popCaramel-desk-2x-min_xakzqn.png 2x" 
@@ -138,7 +138,7 @@
                   <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194092/apero/hero/hero-mob/hero-popCaramel-mob-1x-min_ccvj0g.png 1x, 
                   https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194094/apero/hero/hero-mob/hero-popCaramel-mob-2x-min_uxetqn.png 2x" 
                   media="(max-width: 743px)"/>
-               <img class="hero-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194092/apero/hero/hero-mob/hero-popCaramel-mob-1x-min_ccvj0g.png"  alt="Violet popcorn" />
+               <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194092/apero/hero/hero-mob/hero-popCaramel-mob-1x-min_ccvj0g.png"  alt="Violet popcorn" />
                </picture>
               </div>
             </div>
@@ -158,7 +158,7 @@
                 </a>
               </div>
               <div class="hero__image-container"> 
-                <div class="hero__image hero__image-green"></div>
+                <div class=" hero__image-green"></div>
                 <picture>
                   <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732193969/apero/hero/hero-desktop/hero-popButter-desk-1x-min_jfhysc.png 1x,
                   https://res.cloudinary.com/ddtdtthqh/image/upload/v1732193970/apero/hero/hero-desktop/hero-popButter-desk-2x-min_jynbbx.png 2x" 
@@ -169,7 +169,7 @@
                   <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194088/apero/hero/hero-mob/hero-popButter-mob-1x-min_gauemx.png 1x, 
                   https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194090/apero/hero/hero-mob/hero-popButter-mob-2x-min_yfs7om.png 2x" 
                   media="(max-width: 743px)" />
-               <img  src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194088/apero/hero/hero-mob/hero-popButter-mob-1x-min_gauemx.png"  class="hero-image" alt="Green popcorn"  />
+               <img class="hero__image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194088/apero/hero/hero-mob/hero-popButter-mob-1x-min_gauemx.png"  class="hero-image" alt="Green popcorn"  />
                </picture>
               </div>
             </div>
@@ -506,16 +506,16 @@
           <button class="button__secondary question__button" type="submit">Відправити заявку</button>
         </form>
         <picture>
-          <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732292476/apero/questions/qustion-corn-desk-1x_pa5mli.png 1x,
-          https://res.cloudinary.com/ddtdtthqh/image/upload/v1732292477/apero/questions/qustion-corn-desk-2x_bshxqo.png 2x"
+          <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1734813460/apero/questions/qustion-corn-desk-1x-min_jpewmy.png 1x,
+          https://res.cloudinary.com/ddtdtthqh/image/upload/v1734813460/apero/questions/qustion-corn-desk-2x-min_zszvep.png 2x"
           media="(min-width: 1360px)" />
-          <img class="question_image-popcorn" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732292476/apero/questions/qustion-corn-desk-1x_pa5mli.png" alt="corn ready">
+          <img class="question_image-popcorn" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1734813460/apero/questions/qustion-corn-desk-1x-min_jpewmy.png" alt="corn ready">
         </picture>
         <picture>
-          <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1734728772/apero/collection/collection-desktop/Visualization_Milk_6_cawbod.png 1x,
-          https://res.cloudinary.com/ddtdtthqh/image/upload/v1734728773/apero/collection/collection-desktop/Visualization_Milk_6_2x_ze0b8i.png 2x"
+          <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1734813194/apero/collection/collection-desktop/Visualization_Milk_6-min_cwlvuw.png 1x,
+          https://res.cloudinary.com/ddtdtthqh/image/upload/v1734813194/apero/collection/collection-desktop/Visualization_Milk_6_2x-min_woeblh.png 2x"
           media="(min-width: 1360px)" />
-          <img class="question_image-milk" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1734728772/apero/collection/collection-desktop/Visualization_Milk_6_cawbod.png" alt="milk puds">
+          <img class="question_image-milk" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1734813194/apero/collection/collection-desktop/Visualization_Milk_6-min_cwlvuw.png" alt="milk puds">
         </picture>
     </section>
    </main>
@@ -585,7 +585,7 @@
 
   </footer>
 
-  <!-- modal -->
+
 
   <div class="backdrop is-hidden">
      <div class="modal">
@@ -600,11 +600,11 @@
           <h2 class="title question__title">бажаєте стати партнером або маєте пропозиції?</h2>
           <h3 class="subtitle question__subtitle">Заповніть заявку і ми зв’яжемось з Вами найближчим часом</h3>
            <div class="question__form-container">
-             <input class="question__input text black" type="text" name="name" id="name" placeholder="Ваше ім'я" required>
-             <input class="question__input text black" type="email" name="email" id="email" placeholder="Ваш email" required>
-             <input class="question__input text black" type="tel" name="tel" id="tel" placeholder="Номер телефону" required>
-             <input class="question__input text black" type="text" name="company" id="company" placeholder="Назва компанії">
-             <textarea class="question__textarea text black" name="comment" id="comment" cols="30" rows="10" placeholder="Напишіть щось"></textarea>
+             <input class="question__input text black" type="text" name="name"  placeholder="Ваше ім'я" required>
+             <input class="question__input text black" type="email" name="email" placeholder="Ваш email" required>
+             <input class="question__input text black" type="tel" name="tel"  placeholder="Номер телефону" required>
+             <input class="question__input text black" type="text" name="company" placeholder="Назва компанії">
+             <textarea class="question__textarea text black" name="comment" cols="30" rows="10" placeholder="Напишіть щось"></textarea>
            </div>
            <button class="button__secondary question__button"  type="submit">Відправити заявку</button>
           
@@ -635,8 +635,6 @@
     
  </div>
    
-   <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script> -->
-   <!-- <script type="module" src="./js/swiper.js"></script> -->
    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick.min.js"></script>
    <script type="module" src="./js/slick.js"></script>
