--- a/partner.html
+++ b/partner.html
@@ -21,7 +21,7 @@
 
   <!-- <header class="header-container"> -->
     <header class="header header__second">
-      <a href="./index.html" class="link"> 
+      <a href="./index.html" class="link" aria-label="На головну"> 
         <svg class="logo" width="80" height="24">
           <use href="./images/symbol-defs.svg#icon-logo-black"></use>
         </svg>
@@ -35,7 +35,7 @@
            <li class="list"><a href="./contacts.html" class="link nav__link nav__link-second  text">Контакти</a></li>
        </ul>
       </nav>
-      <button type="button" class="button__mobile__menu">
+      <button type="button" class="button__mobile__menu" aria-label="Мобільне меню">
        <svg class="icon__menu__mobile icon__menu__mobile-second"  width="24" height="24">
          <use href="./images/symbol-defs.svg#icon-menu-mobile"></use>
        </svg>
@@ -153,7 +153,7 @@
         <img src="https://res.cloudinary.com/ddtdtthqh/apero/products-partners/bamboo.png" alt=""> -->
      </div>
 
-    <!-- </div> -->
+    </div>
   </section>
 
 </main>
