--- a/products.html
+++ b/products.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header class="header header__second">
-      <a href="./index.html" class="link"> 
+      <a href="./index.html" class="link" aria-label="На головну"> 
         <svg class="logo" width="80" height="24">
           <use href="./images/symbol-defs.svg#icon-logo-black"></use>
         </svg>
@@ -33,7 +33,7 @@
            <li class="list"><a href="./contacts.html" class="link nav__link nav__link-second  text">Контакти</a></li>
        </ul>
       </nav>
-      <button type="button" class="button__mobile__menu">
+      <button type="button" class="button__mobile__menu" aria-label="Мобільне меню">
        <svg class="icon__menu__mobile icon__menu__mobile-second"  width="24" height="24">
          <use href="./images/symbol-defs.svg#icon-menu-mobile"></use>
        </svg>
@@ -869,8 +869,8 @@
          <img  src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/bamboo-mob-1x-min_dw6ici.png"  alt="production"  />
         </picture>
      </div>
-
-  </section
+    </div>
+    </section>
  
 </main>
 
@@ -942,11 +942,11 @@
        <h2 class="title question__title">бажаєте стати партнером або маєте пропозиції?</h2>
        <h3 class="subtitle question__subtitle">Заповніть заявку і ми зв’яжемось з Вами найближчим часом</h3>
         <div class="question__form-container">
-          <input class="question__input text black" type="text" name="name" id="name" placeholder="Ваше ім'я" required>
-          <input class="question__input text black" type="email" name="email" id="email" placeholder="Ваш email" required>
-          <input class="question__input text black" type="tel" name="tel" id="tel" placeholder="Номер телефону" required>
-          <input class="question__input text black" type="text" name="company" id="company" placeholder="Назва компанії">
-          <textarea class="question__textarea text black" name="comment" id="comment" cols="30" rows="10" placeholder="Напишіть щось"></textarea>
+          <input class="question__input text black" type="text" name="name"  placeholder="Ваше ім'я" required>
+          <input class="question__input text black" type="email" name="email" placeholder="Ваш email" required>
+          <input class="question__input text black" type="tel" name="tel"  placeholder="Номер телефону" required>
+          <input class="question__input text black" type="text" name="company"  placeholder="Назва компанії">
+          <textarea class="question__textarea text black" name="comment"  cols="30" rows="10" placeholder="Напишіть щось"></textarea>
         </div>
         <button class="button__secondary question__button"  type="submit">Відправити заявку</button>
        
