update footer link hover

--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Tektur:wght@400..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./src/fonts/fonts.css">
   <link rel="stylesheet" href="./css/main.min.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon.png">
 </head>
 <body>
     <header class="header header__second">
@@ -163,7 +164,7 @@
           <div class="about__history-block">
               <span class="number">2021</span>
               <h3 class="subtitle about__history-subtitle">Стрімкий розвиток</h3>
-              <p class="text">Компанія розвивається рік за роком. В 2021 року підприємство АПЕРО звітує щодо наступних показників, що вказують на стрімкий розвиток українського виробника харчової продукції</p>
+              <p class="text">Компанія розвивається рік за роком. В 2021 році підприємство АПЕРО звітує щодо наступних показників, що вказують на стрімкий розвиток українського виробника харчової продукції</p>
           </div>
         </div>
         <h2 class="title about__history-title">Вже понад <span class="orange">7 років</span> в мальовничому селищі Глибока, виробляються <span class="orange">найсмачніші</span> солоні та солодкі <span class="orange">снеки</span> із <span class="orange">української</span> кукурудзи</h2>
