--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./css/main.min.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon.png">
    
   </head>
   <body>
@@ -527,10 +528,10 @@
           <use class="footer__logo" href="./images/symbol-defs.svg#icon-logo"></use>
         </svg>
         <ul class="item__container">
-          <li class="list footer__list"><a class="link footer__link text white" href="./about.html">Про нас</a></li>
-          <li class="list footer__list"><a class="link footer__link text white" href="./products.html">Продукція</a></li>
-          <li class="list footer__list"><a class="link footer__link text white" href="./partner.html">Партнерам</a></li>
-          <li class="list footer__list"><a class="link footer__link text white" href="./contacts.html">Контакти</a></li>
+          <li class="list footer__list"><a class="link footer__link text white link__white" href="./about.html">Про нас</a></li>
+          <li class="list footer__list"><a class="link footer__link text white link__white" href="./products.html">Продукція</a></li>
+          <li class="list footer__list"><a class="link footer__link text white link__white" href="./partner.html">Партнерам</a></li>
+          <li class="list footer__list"><a class="link footer__link text white link__white" href="./contacts.html">Контакти</a></li>
         </ul>
       </div>
 
@@ -538,31 +539,35 @@
         <div class="footer__item__container">
           <ul class="footer__information-item">
             <li class="list footer__information-list"> 
-              <svg class="footer__icon" width="24" height="24">
-                <use href="./images/symbol-defs.svg#icon-location"></use>
-              </svg>
-              <a class="link text white" href="https://maps.app.goo.gl/PVx23Uv1xSC4gq959">Чернівецька обл., смт. Глибока, вул. Валерія Красняна, 60к</a>
+              <a class="link text white footer__link link__white" href="https://maps.app.goo.gl/PVx23Uv1xSC4gq959">
+                <svg class="footer__icon" width="48" height="48">
+                  <use href="./images/symbol-defs.svg#icon-location"></use>
+                </svg>
+                Чернівецька обл., смт. Глибока, вул. Валерія Красняна, 60к</a>
             </li>
             <li class="list footer__information-list">
-              <svg class="footer__icon" width="24" height="24">
-                <use href="./images/symbol-defs.svg#icon-mail"></use>
-              </svg>
-              <a class="link text white" href="mailto:office.apero@gmail.com">office.apero@gmail.com</a>
+              <a class="link text white footer__link link__white" href="mailto:office.apero@gmail.com">
+                <svg class="footer__icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-mail"></use>
+                </svg>
+                office.apero@gmail.com</a>
             </li>
           </ul>
   
           <ul class="footer__information-item">
             <li class="list footer__information-list">
-              <svg class="footer__icon" width="24" height="24">
-                <use href="./images/symbol-defs.svg#icon-phone"></use>
-              </svg>
-              <a class="link text white" href="tel:+380667472803">+38 (066) 74 72 803</a>
+              <a class="link text white footer__link link__white" href="tel:+380667472803">
+                <svg class="footer__icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-phone"></use>
+                </svg>
+                +38 (066) 74 72 803</a>
             </li>
             <li class="list footer__information-list">
-              <svg class="footer__icon" width="24" height="24">
-                <use href="./images/symbol-defs.svg#icon-phone"></use>
-              </svg>
-              <a class="link text white" href="tel:+380960897897">+38 (096) 08 97 987</a>
+              <a class="link text white footer__link link__white" href="tel:+380960897897">
+                <svg class="footer__icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-phone"></use>
+                </svg>
+                +38 (096) 08 97 987</a>
             </li>
           </ul>
 
