--- a/products.html
+++ b/products.html
@@ -16,6 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Tektur:wght@400..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./src/fonts/fonts.css">
     <link rel="stylesheet" href="./css/main.min.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon.png">
 </head>
 <body>
     <header class="header header__second">
@@ -140,7 +141,7 @@
               media="(max-width: 743px)"/>
              <img class="image__baget" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403089/apero/products/suharyky/baget-crab-mob-1x-min_kmgfmt.png"  alt="production"  />
             </picture>
-                <p class="subtitle product__list-subtitle">Багет пшеничний зі смаком краба</p>
+                <p class="subtitle product__list-subtitle">Багет пшеничний Snex зі смаком краба</p>
                <div class="product__text-container">
                 <p class="text product__list-text">Вага: 60 г</p>
                 <p class="text product__list-text">Фасування: 20 шт</p>
@@ -209,7 +210,7 @@
               media="(max-width: 743px)"/>
              <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733402994/apero/products/popcorn/corn-micro-cheese-mob-1x-min_zps6ku.png"  alt="production"  />
             </picture>
-               <p class="subtitle product__list-subtitle">Попкорн для м/хв зі смаком сиру</p>
+               <p class="subtitle product__list-subtitle">Попкорн Snex для м/хв зі смаком сиру</p>
                <div class="product__text-container">
                  <p class="text product__list-text">Вага: 90 г</p>
                  <p class="text product__list-text">Фасування: 50 шт</p>
@@ -260,7 +261,7 @@
                     <p class="subtitle product__list-subtitle">Полоски зі смаком бекону</p>
                    <div class="product__text-container">
                     <p class="text product__list-text">Вага: 50 г</p>
-                    <p class="text product__list-text">Фасування: 50 шт</p>
+                    <p class="text product__list-text">Фасування: 20 шт</p>
                   </div>
                   </li>
                   <li class="list product__list suharyky__list">
@@ -273,7 +274,7 @@
                       media="(max-width: 743px)"/>
                      <img class="image__baget" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403099/apero/products/suharyky/baget-souse-mob-1x-min_nk1orl.png"  alt="production"  />
                     </picture>
-                        <p class="subtitle product__list-subtitle">Багет житньо-пшеничний зі смаком сметани та зелені</p>
+                        <p class="subtitle product__list-subtitle">Багет житньо-пшеничний Snex зі смаком сметани та зелені</p>
                        <div class="product__text-container">
                         <p class="text product__list-text">Вага: 60 г</p>
                         <p class="text product__list-text">Фасування: 20 шт</p>
@@ -290,7 +291,7 @@
               media="(max-width: 743px)"/>
              <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733402992/apero/products/popcorn/corn-micro-caramel-mob-1x-min_trkhnl.png"  alt="production"  />
             </picture>
-               <p class="subtitle product__list-subtitle">Попкорн для м/хв з ароматом карамелі</p>
+               <p class="subtitle product__list-subtitle">Попкорн Snex для м/хв з ароматом карамелі</p>
                <div class="product__text-container">
                 <p class="text product__list-text">Вага: 90 г</p>
                 <p class="text product__list-text">Фасування: 50 шт</p>
@@ -339,7 +340,7 @@
               media="(max-width: 743px)"/>
              <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733402997/apero/products/popcorn/corn-micro-salt-mob-1x-min_zvdrys.png"  alt="production"  />
             </picture>
-               <p class="subtitle product__list-subtitle">Попкорн для м/хв з сіллю</p>
+               <p class="subtitle product__list-subtitle">Попкорн Snex для м/хв з сіллю</p>
                <div class="product__text-container">
                 <p class="text product__list-text">Вага: 90 г</p>
                 <p class="text product__list-text">Фасування: 50 шт</p>
@@ -357,7 +358,7 @@
               media="(max-width: 743px)"/>
              <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733402989/apero/products/popcorn/corn-micro-butter-mob-1x-min_sy8tzi.png"  alt="production"  />
             </picture>
-               <p class="subtitle product__list-subtitle">Попкорн для м/хв з ароматом  вершкового масла</p>
+               <p class="subtitle product__list-subtitle">Попкорн Snex для м/хв з ароматом  вершкового масла</p>
                <div class="product__text-container">
                 <p class="text product__list-text">Вага: 90 г</p>
                 <p class="text product__list-text">Фасування: 50 шт</p>
@@ -374,7 +375,7 @@
               media="(max-width: 743px)"/>
              <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733519781/apero/products/popcorn/corn-rice-desktop-mob-1x-min_gid8y5.png"  alt="production"  />
             </picture>
-               <p class="subtitle product__list-subtitle">Повтряні зерна рису глазуровані</p>
+               <p class="subtitle product__list-subtitle">Повітряні зерна рису глазуровані</p>
                <div class="product__text-container">
                 <p class="text product__list-text">Вага: 35 г</p>
                 <p class="text product__list-text">Фасування: 20 шт</p>
@@ -390,9 +391,9 @@
               media="(max-width: 743px)"/>
              <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733402999/apero/products/popcorn/corn-r-cheese-mob-1x-min_kkwxab.png"  alt="production"  />
             </picture>
-               <p class="subtitle product__list-subtitle">Готовий попкорн зі смаком сиру</p>
+               <p class="subtitle product__list-subtitle">Готовий попкорн Snex зі смаком сиру</p>
                <div class="product__text-container">
-                <p class="text product__list-text">Вага: 90гр</p>
+                <p class="text product__list-text">Вага: 60гр</p>
                 <p class="text product__list-text">Фасування: 14 шт</p>
               </div>
               </li>
@@ -544,7 +545,7 @@
               media="(max-width: 743px)"/>
              <img class="image__baget" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403093/apero/products/suharyky/baget-ketchup-mob-1x-min_zj3epu.png"  alt="production"  />
             </picture>
-                <p class="subtitle product__list-subtitle">Сухарик пшеничний зі смаком кетчупу</p>
+                <p class="subtitle product__list-subtitle">Сухарик пшеничний Snex зі смаком кетчупу</p>
                <div class="product__text-container">
                 <p class="text product__list-text">Вага: 60 г</p>
                 <p class="text product__list-text">Фасування: 20 шт</p>
@@ -561,7 +562,7 @@
               media="(max-width: 743px)"/>
              <img class="image__baget" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403096/apero/products/suharyky/baget-sos-mob-1x-min_msgvjt.png"  alt="production"  />
             </picture>
-                <p class="subtitle product__list-subtitle">Сухарик житній зі смаком мисливських ковбасок</p>
+                <p class="subtitle product__list-subtitle">Сухарик житній Snex зі смаком мисливських ковбасок</p>
                <div class="product__text-container">
                 <p class="text product__list-text">Вага: 60 г</p>
                 <p class="text product__list-text">Фасування: 20 шт</p>
@@ -582,7 +583,7 @@
               media="(max-width: 743px)"/>
              <img class="image_corn__pods" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733472634/apero/products/corn_pads/twin-s-straw-mob-1x-min_pa9xye.png"  alt="production"  />
             </picture>
-          <p class="subtitle product__list-subtitle">Трубочка кукурудзяна зі смаком полуниці</p>
+          <p class="subtitle product__list-subtitle">Трубочка кукурудзяна X-TWIN зі смаком полуниці</p>
                <div class="product__text-container">
                 <p class="text product__list-text">Вага: 18 г</p>
                 <p class="text product__list-text">Фасування: 24 шт</p>
@@ -600,9 +601,9 @@
               media="(max-width: 743px)"/>
              <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733403004/apero/products/popcorn/corn-r-salt-mob-1x-min_y32cih.png"  alt="production"  />
             </picture>
-               <p class="subtitle product__list-subtitle">Готовий попкорн з сіллю</p>
+               <p class="subtitle product__list-subtitle">Готовий попкорн Snex з сіллю</p>
                <div class="product__text-container">
-                <p class="text product__list-text">Вага: 90гр</p>
+                <p class="text product__list-text">Вага: 60гр</p>
                 <p class="text product__list-text">Фасування: 14 шт</p>
               </div>
               </li>
@@ -617,7 +618,7 @@
               media="(max-width: 743px)"/>
              <img class="image_corn__pods__milk" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733517025/apero/products/corn_pads/twin-s-milk-mob-1x-min_a6rmiv.png"  alt="production"  />
             </picture>
-          <p class="subtitle product__list-subtitle">Трубочка кукурудзяна зі смаком молока</p>
+          <p class="subtitle product__list-subtitle">Трубочка кукурудзяна X-TWIN зі смаком молока</p>
                <div class="product__text-container">
                 <p class="text product__list-text">Вага: 18 г</p>
                 <p class="text product__list-text">Фасування: 24 шт</p>
@@ -664,7 +665,7 @@
               media="(max-width: 743px)"/>
              <img class="image_corn__pods__choco" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733472627/apero/products/corn_pads/twin-s-choco-mob-1x-min_z1wqth.png"  alt="production"  />
             </picture>
-          <p class="subtitle product__list-subtitle">Трубочка кукурудзяна зі смаком шоколаду</p>
+          <p class="subtitle product__list-subtitle">Трубочка кукурудзяна X-TWIN зі смаком шоколаду</p>
                <div class="product__text-container">
                 <p class="text product__list-text">Вага: 18 г</p>
                 <p class="text product__list-text">Фасування: 24 шт</p>
@@ -762,7 +763,7 @@
               media="(max-width: 743px)"/>
              <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733402786/apero/products/bamboo/bamboo-choko-mob-1x-min_kzwd8l.png"  alt="production"  />
             </picture>
-          <p class="subtitle product__list-subtitle">МІНІ Трубочки бамбукові тростинки зі смаком шоколаду</p>
+          <p class="subtitle product__list-subtitle">МІНІ Трубочки бамбукові тростинки Snex зі смаком шоколаду</p>
                <div class="product__text-container">
                 <p class="text product__list-text">Вага: 100 г</p>
                 <p class="text product__list-text">Фасування: 20 шт</p>
@@ -794,7 +795,7 @@
               media="(max-width: 743px)"/>
              <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733402786/apero/products/bamboo/bamboo-milk-mob-1x-min_bwjzjf.png"  alt="production"  />
             </picture>
-             <p class="subtitle product__list-subtitle">МІНІ Трубочки бамбукові тростинки зі смаком молока</p>
+             <p class="subtitle product__list-subtitle">МІНІ Трубочки бамбукові тростинки Snex зі смаком молока</p>
                <div class="product__text-container">
                 <p class="text product__list-text">Вага: 100 г</p>
                 <p class="text product__list-text">Фасування: 20 шт</p>
