--- a/contacts.html
+++ b/contacts.html
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Tektur:wght@400..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/fonts/fonts.css">
     <link rel="stylesheet" href="./css/main.min.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon.png">
 </head>
 <body>
     <header class="header header__second">
